--- a/.github/workflows/pre_merge.yml
+++ b/.github/workflows/pre_merge.yml
@@ -18,4 +18,4 @@ jobs:
           go-version: '1.21'
       - name: Run tests
         run: |
-          go test -v -race -cover ./...
+          go test -v -race ./...
